# verificarlo

./: README.md  configure.ac  verificarlo.in.in
src/: Makefile.am
src/backends/: Makefile.am
src/backends/interflop-analysis/: Makefile.am  interflop_analysis.c
src/backends/interflop-bitmask/: Makefile.am  interflop_bitmask.c
src/backends/interflop-cancellation/: Makefile.am  interflop_cancellation.c
src/backends/interflop-ieee/: Makefile.am  interflop_ieee.c
src/backends/interflop-mca/: Makefile.am  interflop_mca.c
src/backends/interflop-mca-mpfr/: Makefile.am  interflop_mca_mpfr.c
src/backends/interflop-vprec/: Makefile.am  interflop_vprec.c
src/common/: Makefile.am  float_utils.h  interflop.h  vfc_hashmap.c  vfc_hashmap.h  vprec_utils.c  vprec_utils.h
src/libvfcfuncinstrument/: Makefile.am  libVFCFuncInstrument.cpp  libVFCFuncInstrument.hpp
src/libvfcinstrument/: libVFCInstrument.cpp
src/libvfcprofile/: Makefile.am  libVFCProfile.cpp  libVFCProfile.hpp
src/vfcwrapper/: Makefile.am  funcinstr.c  main.c
tests/test_cancellation/: test.sh
tests/test_set_prec/: result.txt  test.c  test.sh
tests/test_vprec_instrument/: print_range  result.txt  set_input_file  test.sh
